--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Jayakrishnan S",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
